Fix About page markdown rendering, reduce About page background z-index

--- a/src/App.css
+++ b/src/App.css
@@ -137,7 +137,7 @@ a {
     /* font-weight: 600; */
 
     /* letter-spacing: 0; */
-    word-spacing: 0;
+    /* word-spacing: 0; */
     /* line-height: normal; */
     /* line-height: 1; */
     /* font-weight: 600; */
