--- a/src/screens/About/About.css
+++ b/src/screens/About/About.css
@@ -15,7 +15,7 @@
 
 #about-background {
   position: fixed;
-  z-index: 0;
+  z-index: -9999;
   left: 0;
   top: 0;
   width: 100%;
